[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-pipeline"
version = "0.1.0"
description = "Public signal expansion and correlation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "sherlock-project==0.16.0",
]

[project.optional-dependencies]
email = [
  "holehe==1.61",
]

[project.scripts]
osint-pipeline = "osint_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
